# obs-studio

./: .gitignore
.github/workflows/: main.yml
CI/: full-build-macos.sh
UI/: obs-app.cpp
plugins/: CMakeLists.txt
plugins/mac-virtualcam/src/common/: MachProtocol.h
plugins/mac-virtualcam/src/dal-plugin/: CMSampleBufferUtils.mm  CMakeLists.txt  Logging.h  MachClient.mm  PlugIn.mm  Stream.mm  TestCard.mm
plugins/mac-virtualcam/src/obs-plugin/: Defines.h  MachServer.mm  plugin-main.mm
